# pixforge

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
docs/: privacy-policy.md
scripts/: build-all.ps1  build-msix.ps1  build-nsis.ps1  check-compliance.ps1
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: image_engine.rs  lib.rs  main.rs
src/components/: ErrorBoundary.tsx
src/components/layout/: Sidebar.tsx  Statusbar.tsx  Titlebar.tsx
src/features/batch/: BatchPanel.tsx
src/features/bg_effect/: BgEffectPanel.tsx
src/features/convert/: ConvertPanel.tsx
src/features/crop/: CropPanel.tsx
src/features/optimize/: OptimizePanel.tsx
src/features/resize/: ResizePanel.tsx
src/features/settings/: SettingsPanel.tsx
src/lib/: i18n.ts  invoke.ts  useExportShortcut.ts
src/store/: app.ts
