[package]
name = "pixforge"
version = "0.1.0"
description = "PixForge - Lightweight Image Processing App"
authors = ["唐昆"]
edition = "2021"

[lib]
name = "pixforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing — pure Rust, no external executables
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "webp", "gif", "tiff", "bmp", "ico"
] }
resvg = "0.44"
base64 = "0.22"
imageproc = "0.25"
rayon = "1"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
